@@ -5,6 +5,8 @@
 *************************************************************************************************************
 
 added/fixed: (dd-mm-yyyy) (please specify date in CET)
+  - 28-11-2004 added: get current Kai player count for each game in the games view.
+  - 28-11-2004 added: ability to force specific Kai arena - game title id mappings.
   - 28-11-2004 fixed: possible lockup switching from gui to fullscreen video while video playing
   - 28-11-2004 fixed: bug in kaiclient preventing voice chat from working.
   - 27-11-2004 added: Show contact/friend avatar on Kai Toast popup.
